<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_share_title">Share</string>
    <string name="action_trash_title">Trash</string>
    <string name="action_check_all_title">All</string>
    <string name="share_sheet_title">Share videos</string>
    <string name="video_uri_mime_type">video/*</string>
    <string name="extra_vid_uri">vid uri</string>
    <string name="activity_video_detail_label"> </string>
    <string name="vid_size_template">%1$sMB</string>
    <string name="vid_resolution_template">%1$s*%2$s</string>
    <string name="vid_date_format">dd MMMM yyyy HH:mm</string>
    <string name="vid_duration_format">%02d:%02d</string>
    <string name="trashing_success_message">Videos moved to trash</string>
    <string name="trashing_failure_message">Failed to trash videos!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_video">play video</string>
    <string name="video_mime_type">video/*</string>
    <string name="no_player_error">Unable to start video</string>
    <string name="size_label">Size:</string>
    <string name="vid_size_sample">112.34MB</string>
    <string name="date_label">Date:</string>
    <string name="vid_added_sample">Jul 12 2019 13:45</string>
    <string name="path_label">Path:</string>
    <string name="vid_path_sample">/Internal storage/DCIM/Videos</string>
    <string name="title_label">Title:</string>
    <string name="vid_title_sample">my_vid2334.mp4</string>
    <string name="resolution_label">Resolution:</string>
    <string name="vid_resolution_sample">1980*1200</string>
    <string name="duration_label">Duration:</string>
    <string name="vid_duration_sample">2:13</string>
    <string name="trash_dialog_message">Move videos to recycle bin?</string>
    <string name="trash_dialog_title">Trash videos</string>
    <string name="dialog_pos_label">ok</string>
    <string name="dialog_neg_label">cancel</string>
    <string name="title_undo_trash">undo</string>
    <string name="trashing_undo_failure_message">Fail to restore videos!</string>
</resources>